--- a/Intelligence Module/PDF Recoc/InterfaceBackend/InterfaceFrontend/MainWindow.xaml
+++ b/Intelligence Module/PDF Recoc/InterfaceBackend/InterfaceFrontend/MainWindow.xaml
@@ -5,8 +5,46 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InterfaceFrontend"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" 
+        WindowStyle="None"
+        AllowsTransparency="True"
+        Background="Gray"  
+        Loaded="MainWindow_Loaded">
     <Grid>
-        
+        <Canvas x:Name="imageCanvas" Background="White" 
+            VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+
+        </Canvas>
+
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10">
+            <ComboBox x:Name="imageSelectionComboBox" SelectionChanged="ImageSelectionComboBox_SelectionChanged"
+                  Width="120" Margin="0,10,0,0">
+                <ComboBoxItem Content="Single" />
+                <ComboBoxItem Content="Multi" />
+            </ComboBox>
+            <Button x:Name="uploadButton" Content="Upload Images" Click="uploadButton_Click"
+                Width="120" Margin="0,10,0,0"/>
+            <Button x:Name="confirmButton" Content="Confirm" Click="ConfirmButton_Click"
+                Width="120" Margin="0,10,0,0" Visibility="Collapsed"/>
+            <Button x:Name="closeButton" Content="Close" Click="CloseButton_Click"
+                Width="120" Margin="0,10,0,0"/>
+            <Button x:Name="MoveButton" Content="Bewegen" Click="ImageMove_Click" 
+                Width="120" Margin="0,10,0,0" Visibility="Collapsed" />
+            <Button x:Name="ScaleButton" Content="Skalieren" Click="ScaleButton_Click" 
+                Width="120" Margin="0,10,0,0" Visibility="Collapsed" />
+            <Button x:Name="DrawButton" Content="Zeichnen" Click="DrawButton_Click" 
+                Width="120" Margin="0,10,0,0" Visibility="Collapsed" />
+            <Button x:Name="EraseButton" Content="Löschen" Click="EraseButton_Click" 
+                Width="120" Margin="0,10,0,0"  Visibility="Collapsed"/>
+        </StackPanel>
+
+        <TextBlock x:Name="ImageInfoBox"
+               HorizontalAlignment="Left"
+               Margin="10,250,0,20"
+               Background="LightGray"
+               Foreground="Black"
+               FontSize="14"
+               Padding="5"
+               TextWrapping="Wrap" Width="100"/>
     </Grid>
 </Window>
