--- a/Intelligence Module/PDF Recoc/InterfaceBackend/InterfaceFrontend/MainWindow.xaml
+++ b/Intelligence Module/PDF Recoc/InterfaceBackend/InterfaceFrontend/MainWindow.xaml
@@ -5,46 +5,139 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InterfaceFrontend"
         mc:Ignorable="d"
-        Title="MainWindow" 
-        WindowStyle="None"
-        AllowsTransparency="True"
-        Background="Gray"  
-        Loaded="MainWindow_Loaded">
+        Title="Interface" 
+        WindowStyle="SingleBorderWindow" 
+        AllowsTransparency="False"
+        Background="White"  
+        Loaded="MainWindow_Loaded" 
+        Height="698" 
+        Width="1380">
+
     <Grid>
-        <Canvas x:Name="imageCanvas" Background="White" 
-            VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" MinHeight="415.88"/>
+            <!-- Header -->
+            <RowDefinition/>
+            <!-- Inhalt -->
+        </Grid.RowDefinitions>
 
-        </Canvas>
+        <DockPanel 
+            Background="LightGray"  
+            Margin="0,0,0,384" >
+            <ToggleButton 
+                x:Name="BurgerMenuToggleButton" 
+                Width="40" 
+                Height="40" 
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top" 
+                Margin="10,25,0,0"
+                Click="BurgerMenuToggleButton_Click">
+                <TextBlock 
+                    Text="☰" 
+                    FontSize="16" 
+                    HorizontalAlignment="Left" 
+                    VerticalAlignment="Center" />
+            </ToggleButton>
+            <StackPanel 
+                Orientation="Horizontal" 
+                DockPanel.Dock="Top" 
+                Margin="0,5,0,0" 
+                Width="1330">
+                <Image 
+                Source="C:\Schule\Diplomarbeit\Repo\ProjectHelios\Intelligence Module\PDF Recoc\InterfaceBackend\InterfaceFrontend\FW_Braunau-1.png" 
+                DockPanel.Dock="Top" 
+                Height="85" 
+                Width="900"
+                Margin="0,0,0,5" />
+                <Image
+                Source="C:\Schule\Diplomarbeit\Repo\ProjectHelios\Intelligence Module\PDF Recoc\InterfaceBackend\InterfaceFrontend\HELIOS.png" 
+                Height="85"
+                Width="194" 
+                Margin="0,0,0,5" />
+            </StackPanel>
+        </DockPanel>
 
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10">
-            <ComboBox x:Name="imageSelectionComboBox" SelectionChanged="ImageSelectionComboBox_SelectionChanged"
-                  Width="120" Margin="0,10,0,0">
+        <StackPanel 
+            x:Name="SideMenu" 
+            Orientation="Vertical" 
+            Margin="5,100,0,0" 
+            Visibility="Collapsed" 
+            HorizontalAlignment="Left" 
+            VerticalAlignment="Top">
+
+            <ComboBox 
+                x:Name="imageSelectionComboBox" 
+                SelectionChanged="ImageSelectionComboBox_SelectionChanged"
+                Width="110">
                 <ComboBoxItem Content="Single" />
                 <ComboBoxItem Content="Multi" />
             </ComboBox>
-            <Button x:Name="uploadButton" Content="Upload Images" Click="uploadButton_Click"
-                Width="120" Margin="0,10,0,0"/>
-            <Button x:Name="confirmButton" Content="Confirm" Click="ConfirmButton_Click"
-                Width="120" Margin="0,10,0,0" Visibility="Collapsed"/>
-            <Button x:Name="closeButton" Content="Close" Click="CloseButton_Click"
-                Width="120" Margin="0,10,0,0"/>
-            <Button x:Name="MoveButton" Content="Bewegen" Click="ImageMove_Click" 
-                Width="120" Margin="0,10,0,0" Visibility="Collapsed" />
-            <Button x:Name="ScaleButton" Content="Skalieren" Click="ScaleButton_Click" 
-                Width="120" Margin="0,10,0,0" Visibility="Collapsed" />
-            <Button x:Name="DrawButton" Content="Zeichnen" Click="DrawButton_Click" 
-                Width="120" Margin="0,10,0,0" Visibility="Collapsed" />
-            <Button x:Name="EraseButton" Content="Löschen" Click="EraseButton_Click" 
-                Width="120" Margin="0,10,0,0"  Visibility="Collapsed"/>
+
+            <Button 
+                x:Name="uploadButton" 
+                Content="Upload Images" 
+                Click="uploadButton_Click"
+                Width="110" 
+                Margin="0,5,0,0"
+            />
+            <Button 
+                x:Name="confirmButton" 
+                Content="Confirm" 
+                Click="ConfirmButton_Click"
+                Width="120" 
+                Margin="0,5,0,0" 
+                Visibility="Collapsed"
+            />
+            <Button 
+                x:Name="MoveButton" 
+                Content="Bewegen" 
+                Click="ImageMove_Click" 
+                Width="120" 
+                Margin="0,5,0,0" 
+                Visibility="Collapsed" 
+            />
+            <Button 
+                x:Name="ScaleButton" 
+                Content="Skalieren" 
+                Click="ScaleButton_Click" 
+                Width="120" 
+                Margin="0,5,0,0" 
+                Visibility="Collapsed" 
+            />
+            <Button 
+                x:Name="DrawButton" 
+                Content="Zeichnen" 
+                Click="DrawButton_Click" 
+                Width="120" 
+                Margin="0,5,0,0" 
+                Visibility="Collapsed" 
+            />
+            <Button 
+                x:Name="EraseButton" 
+                Content="Löschen" 
+                Click="EraseButton_Click" 
+                Width="120" 
+                Margin="0,5,0,0"  
+                Visibility="Collapsed"
+            />
         </StackPanel>
 
-        <TextBlock x:Name="ImageInfoBox"
+        <Canvas 
+            x:Name="imageCanvas" 
+            Background="White" 
+            Grid.RowSpan="2" 
+            Margin="125,95,0,0"
+        />
+
+        <TextBlock x:Name="SideMenu_TextBox" 
+               Visibility="Collapsed"
                HorizontalAlignment="Left"
-               Margin="10,250,0,20"
-               Background="LightGray"
+               Margin="10,326,0,2"
+               Background="Turquoise"
                Foreground="Black"
                FontSize="14"
                Padding="5"
-               TextWrapping="Wrap" Width="100"/>
+               TextWrapping="Wrap" Width="110"
+        />
     </Grid>
 </Window>
